# zkl-soon-network

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
circuits/: transfer.circom
program/: Cargo.toml
program/src/: instruction.rs  processor.rs  state.rs
soon-demo/: package-lock.json  package.json  vite.config.ts
soon-demo-imp/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
soon-demo-imp/program/: Cargo.toml
soon-demo-imp/program/src/: error.rs  instruction.rs  processor.rs  state.rs
soon-demo-imp/scripts/: generate-proof.js
soon-demo-imp/src/: App.tsx  global.d.ts  main.tsx
soon-demo-imp/src/components/: AddressInput.tsx  FileUpload.tsx  NetworkStatus.tsx  ReceiverView.tsx  TransferHistory.tsx  TransferStatus.tsx  WalletButton.tsx  ZKProofProgress.tsx
soon-demo-imp/src/contexts/: WalletContext.tsx
soon-demo-imp/src/hooks/: useBackpackWallet.ts  useSoonNetwork.ts  useWalletConnection.ts
soon-demo-imp/src/lib/: BackpackConnector.ts
soon-demo-imp/src/services/: backpackWallet.ts  fileTransfer.ts  ipfs.ts  networkManager.ts
soon-demo-imp/src/utils/: buffer-polyfill.ts  crypto.ts  format.ts  ws-browser.ts  ws-client.ts  ws-polyfill.ts  zkProof.ts
soon-demo/program/src/: lib.rs
soon-demo/src/: App.tsx  index.css  main.tsx
soon-demo/src/components/: AddressInput.tsx  (+3 more)
src/: App.tsx  index.css  main.tsx
src/components/: AddressInput.tsx  TransferHistory.tsx  TransferStatus.tsx
src/services/: fileTransfer.ts
src/types/: circomlibjs.d.ts
src/utils/: zkProof.ts
(+4 files in other folders)
