[package]
name = "zk-lokomotive"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=1.18.23"
borsh = "1.5.3"
thiserror = "2.0.3"
num-derive = "0.4"
num-traits = "0.2"
poseidon-rs = "0.0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
